--- a/src/app/Common/login/sigin/sigin.component.html
+++ b/src/app/Common/login/sigin/sigin.component.html
@@ -6,7 +6,7 @@
         <input type="text" matInput formControlName="username" />
       </mat-form-field>
       <mat-form-field class="fuse-mat-dense">
-        <mat-label>Mật khẩu Duowng</mat-label>
+        <mat-label>Mật khẩu</mat-label>
         <input type="password" matInput formControlName="password" />
       </mat-form-field>
     </div>
